--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
     crossorigin="anonymous"
   />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <script
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
